--- a/templates/api/email_response/sponsorship.html
+++ b/templates/api/email_response/sponsorship.html
@@ -178,7 +178,7 @@ style="margin: 0; padding: 0; min-width: 100%; background-color: #f0ffff"
                         <tr>
                             <td style="text-align: start; padding-bottom: 15px">
                                 <p
-                                    style="font-size: 20px; color: #244d68; font-weight: 800"
+                                    style="font-size: 20px; color: #244d68;"
                                 >
                                     Hello {{name_of_sponsor}},
                                 </p>
@@ -187,7 +187,7 @@ style="margin: 0; padding: 0; min-width: 100%; background-color: #f0ffff"
                         <tr>
                             <td style="text-align: start; padding-bottom: 25px">
                                 <p
-                                    style="font-size: 17px; color: #244d68; font-weight: 500"
+                                    style="font-size: 17px; color: #244d68;"
                                 >
                                     We wanted to let you know that we have received your
                                     interest in our sponsoring students
@@ -200,7 +200,7 @@ style="margin: 0; padding: 0; min-width: 100%; background-color: #f0ffff"
                         <tr>
                             <td style="text-align: start; padding-bottom: 25px">
                                 <p
-                                    style="font-size: 17px; color: #244d68; font-weight: 500"
+                                    style="font-size: 17px; color: #244d68;"
                                 >
                                     We will review your application and get back to you as
                                     soon as possible with more information about the class. If
@@ -424,7 +424,7 @@ style="margin: 0; padding: 0; min-width: 100%; background-color: #f0ffff"
                         <tr>
                             <td style="text-align: start; padding-bottom: 25px">
                                 <p
-                                    style="font-size: 17px; color: #244d68; font-weight: 500"
+                                    style="font-size: 17px; color: #244d68;"
                                 >
                                     Thank you for choosing Anchorsoft Academy.
                                 </p>
