--- a/templates/api/email_response/virtual_class.html
+++ b/templates/api/email_response/virtual_class.html
@@ -177,7 +177,7 @@
 								<tr>
 									<td style="text-align: start; padding-bottom: 15px">
 										<p
-											style="font-size: 20px; color: #244d68; font-weight: 800"
+											style="font-size: 20px; color: #244d68;"
 										>
 											Hello {{full_name}},
 										</p>
@@ -186,7 +186,7 @@
 								<tr>
 									<td style="text-align: start; padding-bottom: 25px">
 										<p
-											style="font-size: 17px; color: #244d68; font-weight: 500"
+											style="font-size: 17px; color: #244d68;"
 										>
 											We wanted to let you know that we have received your
 											interest in our <b>virtual class</b> on the course
@@ -202,7 +202,7 @@
 								<tr>
 									<td style="text-align: start; padding-bottom: 25px">
 										<p
-											style="font-size: 17px; color: #244d68; font-weight: 500"
+											style="font-size: 17px; color: #244d68;"
 										>
 											We will review your application and get back to you as
 											soon as possible with more information about the class. If
@@ -373,7 +373,7 @@
 							<tr>
 							  <td style=" padding-bottom: 10px">
 								<p style="color: #404141">
-								  <span style="font-weight: 700">Remarks</span>
+								  <span>Remarks</span>
 								</p>
 							  </td>
 							</tr>
@@ -394,7 +394,7 @@
 								<tr>
 									<td style="text-align: start; padding-bottom: 25px">
 										<p
-											style="font-size: 17px; color: #244d68; font-weight: 500"
+											style="font-size: 17px; color: #244d68;"
 										>
 											Thank you for choosing Anchorsoft Academy.
 										</p>
