email templates updated

--- a/templates/api/email_response/financial_aid.html
+++ b/templates/api/email_response/financial_aid.html
@@ -1,5 +1,5 @@
-{% block subject %} Financial Aid - Anchorsoft Academy {% endblock subject %} {%
-block html_body %}
+{% block subject %} Financial Aid - Anchorsoft Academy {% endblock subject %} 
+{% block html_body %}
 <style type="text/css">
   table {
     border-spacing: 0;
@@ -95,7 +95,7 @@ block html_body %}
               <td style="padding: 0">
                 <a href="">
                   <img
-                    src="http://143.110.168.62/static/mainsite/images/emailLogo.png"
+                    src="https://anchorsoftacademy.com/static/mainsite/images/emailLogo.png"
                     alt=""
                   />
                 </a>
@@ -107,31 +107,31 @@ block html_body %}
               <td class="header-td-align" style="text-align: right">
                 <a href="" style="margin-right: 5px">
                   <img
-                    src="http://143.110.168.62/static/mainsite/images/footerFOLI.svg"
+                    src="https://anchorsoftacademy.com/static/mainsite/images/footerFOLI.svg"
                     alt=""
                   />
                 </a>
                 <a href="" style="margin-right: 5px">
                   <img
-                    src="http://143.110.168.62/static/mainsite/images/footerIN.svg"
+                    src="https://anchorsoftacademy.com/static/mainsite/images/footerIN.svg"
                     alt=""
                   />
                 </a>
                 <a href="" style="margin-right: 5px">
                   <img
-                    src="http://143.110.168.62/static/mainsite/images/footerGRAM.svg"
+                    src="https://anchorsoftacademy.com/static/mainsite/images/footerGRAM.svg"
                     alt=""
                   />
                 </a>
                 <a href="" style="margin-right: 5px">
                   <img
-                    src="http://143.110.168.62/static/mainsite/images/footerFB.svg"
+                    src="https://anchorsoftacademy.com/static/mainsite/images/footerFB.svg"
                     alt=""
                   />
                 </a>
                 <a href="">
                   <img
-                    src="http://143.110.168.62/static/mainsite/images/footerTUBE.svg"
+                    src="https://anchorsoftacademy.com/static/mainsite/images/footerTUBE.svg"
                     alt=""
                   />
                 </a>
@@ -370,7 +370,7 @@ block html_body %}
               >
                 <a href="">
                   <img
-                    src="http://143.110.168.62/static/mainsite/images/emailLogo.png"
+                    src="https://anchorsoftacademy.com/static/mainsite/images/emailLogo.png"
                     alt=""
                   />
                 </a>
@@ -395,31 +395,31 @@ block html_body %}
               <td style="text-align: center; background-color: #244d68">
                 <a href="" style="margin-right: 5px">
                   <img
-                    src="http://143.110.168.62/static/mainsite/images/footerFOLI.svg"
+                    src="https://anchorsoftacademy.com/static/mainsite/images/footerFOLI.svg"
                     alt=""
                   />
                 </a>
                 <a href="" style="margin-right: 5px">
                   <img
-                    src="http://143.110.168.62/static/mainsite/images/footerIN.svg"
+                    src="https://anchorsoftacademy.com/static/mainsite/images/footerIN.svg"
                     alt=""
                   />
                 </a>
                 <a href="" style="margin-right: 5px">
                   <img
-                    src="http://143.110.168.62/static/mainsite/images/footerGRAM.svg"
+                    src="https://anchorsoftacademy.com/static/mainsite/images/footerGRAM.svg"
                     alt=""
                   />
                 </a>
                 <a href="" style="margin-right: 5px">
                   <img
-                    src="http://143.110.168.62/static/mainsite/images/footerFB.svg"
+                    src="https://anchorsoftacademy.com/static/mainsite/images/footerFB.svg"
                     alt=""
                   />
                 </a>
                 <a href="">
                   <img
-                    src="http://143.110.168.62/static/mainsite/images/footerTUBE.svg"
+                    src="https://anchorsoftacademy.com/static/mainsite/images/footerTUBE.svg"
                     alt=""
                   />
                 </a>
