--- a/templates/api/email_response/kidscoding.html
+++ b/templates/api/email_response/kidscoding.html
@@ -104,7 +104,7 @@ Kids Coding - Anchorsoft Academy
                   <td style="padding: 0">
                     <a href="">
                       <img
-                        src="http://143.110.168.62/static/mainsite/images/emailLogo.png"
+                        src="https://anchorsoftacademy.com/static/mainsite/images/emailLogo.png"
                         alt=""
                       />
                     </a>
@@ -116,31 +116,31 @@ Kids Coding - Anchorsoft Academy
                   <td class="header-td-align" style="text-align: right">
                     <a href="" style="margin-right: 5px">
                       <img
-                        src="http://143.110.168.62/static/mainsite/images/footerFOLI.svg"
+                        src="https://anchorsoftacademy.com/static/mainsite/images/footerFOLI.svg"
                         alt=""
                       />
                     </a>
                     <a href="" style="margin-right: 5px">
                       <img
-                        src="http://143.110.168.62/static/mainsite/images/footerIN.svg"
+                        src="https://anchorsoftacademy.com/static/mainsite/images/footerIN.svg"
                         alt=""
                       />
                     </a>
                     <a href="" style="margin-right: 5px">
                       <img
-                        src="http://143.110.168.62/static/mainsite/images/footerGRAM.svg"
+                        src="https://anchorsoftacademy.com/static/mainsite/images/footerGRAM.svg"
                         alt=""
                       />
                     </a>
                     <a href="" style="margin-right: 5px">
                       <img
-                        src="http://143.110.168.62/static/mainsite/images/footerFB.svg"
+                        src="https://anchorsoftacademy.com/static/mainsite/images/footerFB.svg"
                         alt=""
                       />
                     </a>
                     <a href="">
                       <img
-                        src="http://143.110.168.62/static/mainsite/images/footerTUBE.svg"
+                        src="https://anchorsoftacademy.com/static/mainsite/images/footerTUBE.svg"
                         alt=""
                       />
                     </a>
@@ -405,7 +405,7 @@ Kids Coding - Anchorsoft Academy
                   >
                     <a href="">
                       <img
-                        src="http://143.110.168.62/static/mainsite/images/emailLogo.png"
+                        src="https://anchorsoftacademy.com/static/mainsite/images/emailLogo.png"
                         alt=""
                       />
                     </a>
@@ -431,31 +431,31 @@ Kids Coding - Anchorsoft Academy
                   <td style="text-align: center; background-color: #244d68">
                     <a href="" style="margin-right: 5px">
                       <img
-                        src="http://143.110.168.62/static/mainsite/images/footerFOLI.svg"
+                        src="https://anchorsoftacademy.com/static/mainsite/images/footerFOLI.svg"
                         alt=""
                       />
                     </a>
                     <a href="" style="margin-right: 5px">
                       <img
-                        src="http://143.110.168.62/static/mainsite/images/footerIN.svg"
+                        src="https://anchorsoftacademy.com/static/mainsite/images/footerIN.svg"
                         alt=""
                       />
                     </a>
                     <a href="" style="margin-right: 5px">
                       <img
-                        src="http://143.110.168.62/static/mainsite/images/footerGRAM.svg"
+                        src="https://anchorsoftacademy.com/static/mainsite/images/footerGRAM.svg"
                         alt=""
                       />
                     </a>
                     <a href="" style="margin-right: 5px">
                       <img
-                        src="http://143.110.168.62/static/mainsite/images/footerFB.svg"
+                        src="https://anchorsoftacademy.com/static/mainsite/images/footerFB.svg"
                         alt=""
                       />
                     </a>
                     <a href="">
                       <img
-                        src="http://143.110.168.62/static/mainsite/images/footerTUBE.svg"
+                        src="https://anchorsoftacademy.com/static/mainsite/images/footerTUBE.svg"
                         alt=""
                       />
                     </a>
