--- a/templates/api/email_response/sponsorship.html
+++ b/templates/api/email_response/sponsorship.html
@@ -106,7 +106,7 @@ style="margin: 0; padding: 0; min-width: 100%; background-color: #f0ffff"
                             <td style="padding: 0">
                                 <a href="">
                                     <img
-                                        src="http://143.110.168.62/static/mainsite/images/emailLogo.png"
+                                        src="https://anchorsoftacademy.com/static/mainsite/images/emailLogo.png"
                                         alt=""
                                     />
                                 </a>
@@ -118,31 +118,31 @@ style="margin: 0; padding: 0; min-width: 100%; background-color: #f0ffff"
                             <td class="header-td-align" style="text-align: right">
                                 <a href="" style="margin-right: 5px">
                                     <img
-                                        src="http://143.110.168.62/static/mainsite/images/footerFOLI.svg"
+                                        src="https://anchorsoftacademy.com/static/mainsite/images/footerFOLI.svg"
                                         alt=""
                                     />
                                 </a>
                                 <a href="" style="margin-right: 5px">
                                     <img
-                                        src="http://143.110.168.62/static/mainsite/images/footerIN.svg"
+                                        src="https://anchorsoftacademy.com/static/mainsite/images/footerIN.svg"
                                         alt=""
                                     />
                                 </a>
                                 <a href="" style="margin-right: 5px">
                                     <img
-                                        src="http://143.110.168.62/static/mainsite/images/footerGRAM.svg"
+                                        src="https://anchorsoftacademy.com/static/mainsite/images/footerGRAM.svg"
                                         alt=""
                                     />
                                 </a>
                                 <a href="" style="margin-right: 5px">
                                     <img
-                                        src="http://143.110.168.62/static/mainsite/images/footerFB.svg"
+                                        src="https://anchorsoftacademy.com/static/mainsite/images/footerFB.svg"
                                         alt=""
                                     />
                                 </a>
                                 <a href="">
                                     <img
-                                        src="http://143.110.168.62/static/mainsite/images/footerTUBE.svg"
+                                        src="https://anchorsoftacademy.com/static/mainsite/images/footerTUBE.svg"
                                         alt=""
                                     />
                                 </a>
@@ -447,7 +447,7 @@ style="margin: 0; padding: 0; min-width: 100%; background-color: #f0ffff"
                             >
                                 <a href="">
                                     <img
-                                        src="http://143.110.168.62/static/mainsite/images/emailLogo.png"
+                                        src="https://anchorsoftacademy.com/static/mainsite/images/emailLogo.png"
                                         alt=""
                                     />
                                 </a>
@@ -473,31 +473,31 @@ style="margin: 0; padding: 0; min-width: 100%; background-color: #f0ffff"
                             <td style="text-align: center; background-color: #244d68">
                                 <a href="" style="margin-right: 5px">
                                     <img
-                                        src="http://143.110.168.62/static/mainsite/images/footerFOLI.svg"
+                                        src="https://anchorsoftacademy.com/static/mainsite/images/footerFOLI.svg"
                                         alt=""
                                     />
                                 </a>
                                 <a href="" style="margin-right: 5px">
                                     <img
-                                        src="http://143.110.168.62/static/mainsite/images/footerIN.svg"
+                                        src="https://anchorsoftacademy.com/static/mainsite/images/footerIN.svg"
                                         alt=""
                                     />
                                 </a>
                                 <a href="" style="margin-right: 5px">
                                     <img
-                                        src="http://143.110.168.62/static/mainsite/images/footerGRAM.svg"
+                                        src="https://anchorsoftacademy.com/static/mainsite/images/footerGRAM.svg"
                                         alt=""
                                     />
                                 </a>
                                 <a href="" style="margin-right: 5px">
                                     <img
-                                        src="http://143.110.168.62/static/mainsite/images/footerFB.svg"
+                                        src="https://anchorsoftacademy.com/static/mainsite/images/footerFB.svg"
                                         alt=""
                                     />
                                 </a>
                                 <a href="">
                                     <img
-                                        src="http://143.110.168.62/static/mainsite/images/footerTUBE.svg"
+                                        src="https://anchorsoftacademy.com/static/mainsite/images/footerTUBE.svg"
                                         alt=""
                                     />
                                 </a>
