email spelling corrections

--- a/templates/api/email_response/employer_sign_up.html
+++ b/templates/api/email_response/employer_sign_up.html
@@ -154,7 +154,7 @@
               <td style="padding-top: 10px; padding-bottom: 20px">
                 <p style="font-size: 20px; color: #575656; margin: 0">
                   Your account was created succesfully, but you will not be able
-                  to login or post jobs right now untill the detail of your
+                  to login or post jobs right now until the detail of your
                   company is vetted.
                   <br />
                   <br />
