waiting list email context

--- a/templates/api/email_response/course_waiting_list.html
+++ b/templates/api/email_response/course_waiting_list.html
@@ -177,7 +177,7 @@
               <tr>
                 <td style="text-align: start; padding-bottom: 25px">
                   <p style="font-size: 17px; color: #244d68">
-                    We wanted to let you know that we have received 
+                    Thank you for joining the wait list. You will be duly notified when the date for the next batch goes live.
                   </p>
                 </td>
               </tr>
@@ -310,7 +310,10 @@
                       </td>
                     </tr>
                     <tr>
-                      <td style="height: 1px; background-color: #404141"></td>
+                      <td style="height: 1px; background-color: #404141">
+                      <p style="color: #404141">
+                          <span>Best regards</span>
+                        </p></td>
                     </tr>
                   </table>
                 </td>
