course waitlist email corrections

--- a/templates/api/email_response/course_waiting_list.html
+++ b/templates/api/email_response/course_waiting_list.html
@@ -1,4 +1,4 @@
-{% block subject %} Course Waiting List - Anchorsoft Academy 
+{% block subject %} Course Waitlist - Anchorsoft Academy 
 {% endblock subject %} 
 {% block html_body %}
 
@@ -149,7 +149,7 @@
               <tr>
                 <td style="text-align: center">
                   <p style="font-size: 20px; color: white; font-weight: 800">
-                    ANCHORSOFT ACADEMY SHORT QUIZ
+                    ANCHORSOFT ACADEMY WAITLIST
                   </p>
                 </td>
               </tr>
@@ -177,16 +177,10 @@
               <tr>
                 <td style="text-align: start; padding-bottom: 25px">
                   <p style="font-size: 17px; color: #244d68">
-                    Thank you for joining the wait list. You will be duly notified when the date for the next batch goes live.
+                    Thank you for joining the waitlist. You will be duly notified when the date for the next batch goes live.
                   </p>
                 </td>
-              </tr>
-              <tr>
-                <td style="text-align: start; padding-bottom: 25px">
-                  <p style="font-size: 17px; color: #244d68">display
-                  </p>
-                </td>
-              </tr>
+              </tr>             
 
               <!-- name -->
               <tr>
@@ -232,7 +226,7 @@
                   >
                     <tr>
                       <td style="padding-bottom: 10px">
-                        <p style="color: #404141">
+                        <p style="color: black">
                           <span style="font-weight: 700">Email:</span>
                           <span>{{ email }}</span>
                         </p>
@@ -309,12 +303,14 @@
                         </p>
                       </td>
                     </tr>
+                    
                     <tr>
-                      <td style="height: 1px; background-color: #404141">
-                      <p style="color: #404141">
-                          <span>Best regards</span>
-                        </p></td>
-                    </tr>
+                    <td style="text-align: start; padding-bottom: 25px">
+                      <p style="font-size: 17px; color: #244d68">
+                        Best regards
+                      </p>
+                    </td>
+                  </tr>
                   </table>
                 </td>
               </tr>
