--- a/templates/api/email_response/career_opening.html
+++ b/templates/api/email_response/career_opening.html
@@ -221,7 +221,15 @@
               <td style="padding-top: 20px; padding-bottom: 10px">
                 <p style="color: #404141">
                   <span style="font-weight: 700">Mobile:</span>
-                  <span>{{ mobile }}</span>
+                  <span><a
+                    href="tel:{{mobile}}"
+                    style="
+                      text-decoration: none;
+                      color: #244d68;
+                      cursor: pointer;
+                    "
+                    >{{mobile}}</a
+                  ></span>
                 </p>
               </td>
             </tr>
