all email template for mobile arrangement

--- a/templates/api/email_response/career_opening.html
+++ b/templates/api/email_response/career_opening.html
@@ -197,23 +197,8 @@
           </table>
         </td>
       </tr>
-      <tr>
-        <td style="padding: 0 20px; background-color: white">
-          <table width="100%" style="border-spacing: 0" role="presentation">
-            <tr>
-              <td style="padding-top: 20px; padding-bottom: 10px">
-                <p style="color: #404141">
-                  <span style="font-weight: 700">Email:</span>
-                  <span>{{email}}</span>
-                </p>
-              </td>
-            </tr>
-            <tr>
-              <td style="height: 1px; background-color: #404141"></td>
-            </tr>
-          </table>
-        </td>
-      </tr>
+      
+      <!-- Mobile  -->
       <tr>
         <td style="padding: 0 20px; background-color: white">
           <table width="100%" style="border-spacing: 0" role="presentation">
@@ -239,6 +224,25 @@
           </table>
         </td>
       </tr>
+
+      <tr>
+        <td style="padding: 0 20px; background-color: white">
+          <table width="100%" style="border-spacing: 0" role="presentation">
+            <tr>
+              <td style="padding-top: 20px; padding-bottom: 10px">
+                <p style="color: #404141">
+                  <span style="font-weight: 700">Email:</span>
+                  <span>{{email}}</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td style="height: 1px; background-color: #404141"></td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    
 
       <!-- COURSE STUDY -->
       <tr>
